    uninitialised value"
  - Bugfix in CWString::Delete: Falscher Returnwert wurde zurückgegeben, wenn
    Zeichen am Ende des Strings abgeschnitten wurden.
  - Bugfix in CString::Shr und CWString::Shr: Zeichen am Ende des Strings
    wurden nicht abgeschnitten, String konnte länger werden, als der Original-
    string
  - CWString: Operator bool() entfernt, da dieser nicht funktioniert
  - CString: Zusätzliche Set- und SetChar-Funktionen 
    
  Achtung: Mögliches Kompatibilitätsproblem:
  - Änderung in CWString::Set: Bei Verwendung eines char *, std::string oder
    CString als Input, wird der optionale zweite Parameter nicht mehr als
    Bytes, sondern als Zeichen interpretiert! Dieses Verhalten war bereits
    so, wenn keine Iconv-Library installiert war, und somit ein Fallback auf
    die Funktion mbstowcs erfolgte. 

Version 6.4.15 vom 30.04.2013	(SVN-Tag: REL_6_4_15)
  - CLog-Klasse unterstützt nun Syslog

Version 6.4.14 vom 21.03.2013	(CVS-Tag: REL_6_4_14)
  - Bugfix beim Einlesen von ID3-Tag-Covern mit UTF-16-Encoding
  - Bugfix: Potentieller Memory-Leak in CTCPSocket::WaitForMessage gefixt
  - Bugfix: Fehler im Aufbau der verketteten Liste der Klasse CSSL behoben
  - Change: CSSL verwendet malloc und free statt CHeap
  - Bugfix: CTCPSocket: Beim Disconnect oder Shutdown wurde kein SSL_Stop
    aufgerufen. Dadurch konnte der SSL-Stack durcheinander kommen.
  
Version 6.4.13  vom 27.07.2012	(CVS-Tag: REL_6_4_13)
  - Kleinere Kompatibilitätsprobleme unter Windows behoben
  - Fehler in Postgres-DB-Anbindung behoben, wodurch mit FetchArray
    oder FetchFields mehr Zeilen gelesen wurden, als im
    Result vorhanden war
  - DB-Connect mit Postgres-Datenbank unterstützt jetzt Parameter
    "searchpath" zum Setzen des Suchpfades.
  - CString unterstützt Ausgabe als Stream
  - Erkennung der FreeTDS-Library für Sybase erneuert 
  - CDateTime Genauigkeit auf Mikrosekunden erhöht
  - Format des Integer-Wertes von CDateTime::longInt hat sich geändert